// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager #initialize gas cost 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 54338,
}
`;

exports[`PoolManager #lock gas overhead of no-op lock 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 31214,
}
`;

exports[`PoolManager #mint gas cost 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 259183,
}
`;

exports[`PoolManager #mint gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 264703,
}
`;

exports[`PoolManager #mint gas cost with native tokens 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 233618,
}
`;

exports[`PoolManager #swap gas cost 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 85519,
}
`;

exports[`PoolManager #swap gas cost for swap against liquidity 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 128449,
}
`;

exports[`PoolManager #swap gas cost for swap with native tokens against liquidity 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 119956,
}
`;

exports[`PoolManager #swap gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 85555,
}
`;

exports[`PoolManager #swap gas cost with native tokens 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 85279,
}
`;

exports[`PoolManager bytecode size 1`] = `25916`;
